user profile setting for destop version

--- a/app/less/web/account.less
+++ b/app/less/web/account.less
@@ -193,7 +193,6 @@
   }
 }
 
-
 .credit-card-list {
   .card-item {
     -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 1px 3px 2px rgba(216, 216, 216, 0.5);
@@ -278,6 +277,45 @@
       &.phone-number,
       &.post-code {
         width: 200px;
+      }
+    }
+  }
+}
+
+.my-profile-block {
+  h3.title-block {
+    font-size: 30px;
+    margin-top: 0;
+  }
+
+  .connect-with-fb {
+    background: #919191;
+    padding-left: 15px;
+    padding-right: 15px;
+    color: #fff;
+    border-radius: 3px;
+    font-size: 13px;
+    line-height: 35px;
+    border-top: 1px solid #9f9f9f;
+    -webkit-box-shadow: 0px 0px 0px 1px #8d8d8d;
+    box-shadow: 0px 0px 0px 1px #8d8d8d;
+  }
+
+  .sapta-form {
+    .boxing {
+      &.passport {
+        width: 230px
+      }
+
+      &.password {
+        width: 300px
+      }
+
+      &.nationality,
+      &.title {
+        label {
+          margin-bottom: 7px;
+        }
       }
     }
   }
