--- a/app/less/helper/app.utilities.less
+++ b/app/less/helper/app.utilities.less
@@ -119,7 +119,7 @@ a.text-orange {color: #ef9630}
 .pull-in{margin-left: -15px;margin-right: -15px;}
 .pull-out{margin:-10px -15px;}
 
-@border-color : rgba(230, 230, 230, 0.9);
+@border-color : rgba(208, 208, 208, 1);
 
 .b{border: 1px solid @border-color}
 .b-important{border: 1px solid rgba(0, 0, 0, 0.05) !important}
@@ -148,6 +148,12 @@ a.text-orange {color: #ef9630}
 .b-dashed-b-gray{border-bottom:1px dashed #e5e5e5}
 .b-dashed-r-gray{border-right:1px dashed #e5e5e5}
 .b-dashed-l-gray{border-left:1px dashed #e5e5e5}
+
+.b-dotted {border:1px dotted #e5e5e5}
+.b-dotted-t-gray{border-top:1px dotted #e5e5e5}
+.b-dotted-b-gray{border-bottom:1px dotted #e5e5e5}
+.b-dotted-r-gray{border-right:1px dotted #e5e5e5}
+.b-dotted-l-gray{border-left:1px dotted #e5e5e5}
 
 .b-fb, .b-facebook {border-color: #3b5998;}
 .b-instagram, .b-insta {border-color: #517fa4;}
