--- a/app/jade-mobile/profile.jade
+++ b/app/jade-mobile/profile.jade
@@ -6,7 +6,7 @@ block main
   .user-account-profile.pad10
     h2.text-lg.f-bold.m-t-sm.m-b.text-center Profile Setting
 
-    form.sapta-form.user-profile.m-t(method="GET", action="mobile/profile.html")
+    form.sapta-form.user-profile.m-t(method="GET", action="/my-profile-setting.html")
 
       .content-block.b.pad10.m-b-md
         p   You can change your account detail by directly typing on the text fields. Leave the text fields as they are if you do not wish to change them.
