--- a/app/less/web/booking.less
+++ b/app/less/web/booking.less
@@ -509,3 +509,47 @@
     }
   }
 }
+
+.custom-destination-block {
+
+  .title-box {
+    font-family: "Gotham Rounded";
+    font-size: 30px;
+    font-weight: 200;
+  }
+
+  article {
+    p {
+      font-size: 14px;
+      margin-bottom: 0;
+      line-height: 24px
+    }
+  }
+
+  .hint {
+    color: #cc6600;
+    font-family: "Gotham Rounded"
+  }
+
+  .question {
+    font-size: 29px;
+    font-family: "Gotham Rounded";
+    letter-spacing: -1px;
+    line-height: 45px;
+  }
+
+  .sapta-form {
+    .boxing {
+      width: 295px;
+
+      &.answer {
+        width: 100%
+      }
+
+    }
+    .btn-submit {
+      width: auto;
+      margin: 0 auto
+    }
+  }
+}
