--- a/app/css/sapta-tour.css
+++ b/app/css/sapta-tour.css
@@ -6341,6 +6341,10 @@ html[xmlns] .flexslider .slides {
 .account-page {
   overflow-x: hidden;
 }
+.account-page h3.title-block {
+  font-size: 30px;
+  margin-top: 0;
+}
 .account-page .head-title {
   font-family: "Gotham Black";
   font-size: 30px;
@@ -6405,10 +6409,6 @@ html[xmlns] .flexslider .slides {
   color: #b2b2b2;
   border-bottom: 0;
   text-decoration: none;
-}
-.my-booking-block h3.title-block {
-  font-size: 30px;
-  margin-top: 0;
 }
 .my-booking-block .order-item .content {
   -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 3px 2px 4px rgba(216, 216, 216, 0.5);
@@ -6560,10 +6560,6 @@ html[xmlns] .flexslider .slides {
 .credit-card-list .form-edit-credit-card .boxing.post-code {
   width: 200px;
 }
-.my-profile-block h3.title-block {
-  font-size: 30px;
-  margin-top: 0;
-}
 .my-profile-block .connect-with-fb {
   background: #919191;
   padding-left: 15px;
@@ -6585,6 +6581,78 @@ html[xmlns] .flexslider .slides {
 .my-profile-block .sapta-form .boxing.nationality label,
 .my-profile-block .sapta-form .boxing.title label {
   margin-bottom: 7px;
+}
+.my-passenger .passenger-item {
+  -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 1px 3px 2px rgba(216, 216, 216, 0.5);
+  box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 1px 3px 2px rgba(216, 216, 216, 0.5);
+}
+.my-passenger .passenger-item.open .edit-passenger,
+.my-passenger .passenger-item.editable .edit-passenger {
+  display: block;
+}
+.my-passenger .passenger-item.open .col-btn-actions .ico-pencil,
+.my-passenger .passenger-item.editable .col-btn-actions .ico-pencil {
+  background-position: -640px -175px;
+}
+.my-passenger .passenger-item .column {
+  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  height: 85px;
+  position: relative;
+  font-size: 13px;
+}
+.my-passenger .passenger-item .column.col-name {
+  width: 275px;
+  padding-left: 70px;
+}
+.my-passenger .passenger-item .column.col-name span.number {
+  position: absolute;
+  font-weight: 600;
+  left: 15px;
+  top: 13px;
+  line-height: 36px;
+  font-size: 36px;
+  color: #d9d9d9;
+}
+.my-passenger .passenger-item .column.col-name .name {
+  font-size: 13px;
+}
+.my-passenger .passenger-item .column.col-passport {
+  width: 130px;
+}
+.my-passenger .passenger-item .column.col-national {
+  width: 110px;
+}
+.my-passenger .passenger-item .column.col-birth-date {
+  width: 130px;
+}
+.my-passenger .passenger-item .column.col-btn-actions {
+  width: 85px;
+  text-align: center;
+  line-height: 85px;
+  padding-top: 0;
+}
+.my-passenger .passenger-item .column.col-btn-actions .ico {
+  cursor: pointer;
+}
+.my-passenger .passenger-item .column label {
+  color: #888;
+  font-size: 11px;
+  font-family: "Gotham Black";
+  text-transform: uppercase;
+  display: block;
+  margin-bottom: 0;
+  line-height: 18px;
+}
+.my-passenger .passenger-item .column span {
+  color: #000;
+}
+.my-passenger .card-detail {
+  height: 85px;
+}
+.my-passenger .edit-passenger {
+  display: none;
 }
 .hotel-page .tip-inquiry {
   margin-top: 0;
