--- a/app/jade/document.jade
+++ b/app/jade/document.jade
@@ -125,8 +125,8 @@ block main
         .aside.display-cell
           ul.list-unstyled
             li
-              a.active(href="#") Visa
+              a.active(href="document.html") Visa
             li
-              a(href="#") Passport
+              a(href="document-passport.html") Passport
             li
-              a(href="#") Travel Insurance
+              a(href="document-insurance.html") Travel Insurance
