--- a/app/less/web/document.less
+++ b/app/less/web/document.less
@@ -104,4 +104,29 @@
       }
     }
   }
+
+  &.document-passport {
+    article {
+      padding-right: 50px;
+      margin-bottom: 100px
+    }
+
+    .subtitle-article {
+      margin-bottom: 40px;
+      padding-right: 50px
+    }
+
+    ol {
+      margin-bottom: 45px;
+      padding-left: 15px;
+      font-weight: bold;
+
+      li {
+        font-weight: normal;
+        &:before {
+          font-weight: bold;
+        }
+      }
+    }
+  }
 }
