make email template with css inline

--- a/app/jade/email-template-1.jade
+++ b/app/jade/email-template-1.jade
@@ -35,7 +35,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                       p Your booking date is Wed 19 Mar 2014.
                   tr
                     td
-                      table.b-full.tabel-content(width='100%', cellpadding='0', cellspacing='0')
+                      table.b-t.b-r.b-l.tabel-content(width='100%', cellpadding='0', cellspacing='0')
                         tr
                           td.flight-number.va-middle
                             label.block FLIGHT
