--- a/app/less/email-template-1.less
+++ b/app/less/email-template-1.less
@@ -9,11 +9,11 @@ p {
 }
 
 .tabel-content {
-  tr:last-child {
-    td {
-      border-bottom: 0;
-    }
-  }
+  // tr:last-child {
+  //   td {
+  //     border-bottom: 0;
+  //   }
+  // }
   td {
     padding: 15px;
     line-height: 18px;
