--- a/app/less/email-template-1.less
+++ b/app/less/email-template-1.less
@@ -3,6 +3,10 @@
 Email Template 1
 ------------------------------------- */
 
+.content-wrap {
+  padding: 20px 30px;
+}
+
 p {
   line-height: 23px;
   margin-bottom: 25px
