--- a/app/css/email-template-2.css
+++ b/app/css/email-template-2.css
@@ -8,11 +8,9 @@
   box-sizing: border-box;
   font-size: 14px;
 }
-
 img {
   max-width: 100%;
 }
-
 body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: none;
@@ -22,71 +20,66 @@ body {
   /* 1.6em * 14px = 22.4px, use px to get airier line-height also in Thunderbird, and Yahoo!, Outlook.com, AOL webmail clients */
   /*line-height: 22px;*/
 }
-
 /* Let's make sure all tables have defaults */
 table td {
   vertical-align: top;
 }
-
 /* -------------------------------------
     TYPOGRAPHY
 ------------------------------------- */
-
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   color: #000;
   margin: 40px 0 0;
   line-height: 1.2em;
   font-weight: 400;
 }
-
 h1 {
   font-size: 32px;
   font-weight: 500;
   /* 1.2em * 32px = 38.4px, use px to get airier line-height also in Thunderbird, and Yahoo!, Outlook.com, AOL webmail clients */
   /*line-height: 38px;*/
 }
-
 h2 {
   font-size: 24px;
   /* 1.2em * 24px = 28.8px, use px to get airier line-height also in Thunderbird, and Yahoo!, Outlook.com, AOL webmail clients */
   /*line-height: 29px;*/
 }
-
 h3 {
   font-size: 18px;
   /* 1.2em * 18px = 21.6px, use px to get airier line-height also in Thunderbird, and Yahoo!, Outlook.com, AOL webmail clients */
   /*line-height: 22px;*/
 }
-
 h4 {
   font-size: 14px;
   font-weight: 600;
 }
-
-p, ul, ol {
+p,
+ul,
+ol {
   margin-bottom: 10px;
   font-weight: normal;
 }
-p li, ul li, ol li {
+p li,
+ul li,
+ol li {
   margin-left: 5px;
   list-style-position: inside;
 }
-
 /* -------------------------------------
     BODY & CONTAINER
 ------------------------------------- */
 body {
   background-color: #fff;
   font-size: 13px;
-  color: #000
+  color: #000000;
 }
-
 .body-wrap {
   background-color: #fff;
   width: 100%;
-  padding-bottom: 60px
+  padding-bottom: 60px;
 }
-
 .container {
   display: block !important;
   max-width: 835px !important;
@@ -94,72 +87,59 @@ body {
   /* makes it centered */
   clear: both !important;
 }
-
 .content {
   max-width: 835px;
   margin: 0 auto;
   display: block;
   padding: 20px;
 }
-
 /* -------------------------------------
     HEADER, FOOTER, MAIN
 ------------------------------------- */
 .main {
   background-color: #fff;
-  // border: 1px solid #d8d8d8;
 }
-
 .content-block {
   padding: 0 0 20px;
   border: 1px solid #d8d8d8;
   border-bottom: 0;
 }
-
 .header {
   width: 100%;
   margin-bottom: 20px;
 }
-
 .header {
   font-size: 12px;
-
 }
 .invoice-number {
   font-size: 36px;
   line-height: 36px;
   margin: 5px 0 0 0;
-  color: #158ea6
+  color: #158ea6;
 }
-
 .footer {
   width: 100%;
   clear: both;
   color: #999;
   padding: 20px;
 }
-
 .footer {
   padding: 20px 30px;
-
-  p,
-  td {
-    line-height: 17px;
-    color: #767676;
-    font-size: 11px;
-  }
-
-  a {
-    color: #158ea6;
-    font-size: 11px;
-  }
-
-  strong {
-    font-family: "Gotham Black";
-    font-size: 11px;
-  }
 }
-
+.footer p,
+.footer td {
+  line-height: 17px;
+  color: #767676;
+  font-size: 11px;
+}
+.footer a {
+  color: #158ea6;
+  font-size: 11px;
+}
+.footer strong {
+  font-family: "Gotham Black";
+  font-size: 11px;
+}
 /* -------------------------------------
     LINKS & BUTTONS
 ------------------------------------- */
@@ -167,7 +147,6 @@ a {
   color: #ff9933;
   text-decoration: none;
 }
-
 .btn-primary {
   text-decoration: none;
   color: #FFF;
@@ -184,54 +163,88 @@ a {
   border-radius: 5px;
   text-transform: capitalize;
 }
-
 /* -------------------------------------
     OTHER STYLES THAT MIGHT BE USEFUL
 ------------------------------------- */
 .last {
   margin-bottom: 0;
 }
-
 .first {
   margin-top: 0;
 }
-
 .aligncenter {
   text-align: center;
 }
-
 .alignright {
   text-align: right;
 }
-
 .alignleft {
   text-align: left;
 }
-
 .clear {
   clear: both;
 }
-
 .va-bottom {
   vertical-align: bottom;
 }
-
 .va-middle {
   vertical-align: middle;
 }
-
-.b-full {border: 1px solid #d8d8d8}
-.b-t { border-top: 1px solid #d8d8d8 }
-.b-b { border-bottom: 1px solid #d8d8d8 }
-.b-l { border-left: 1px solid #d8d8d8 }
-.b-r { border-right: 1px solid #d8d8d8 }
-.f-bold {font-family: "Gotham Black"; font-family: 700}
-
-.text-primary {color: #158ea3}
-.text-u-c{ text-transform: uppercase;}
-
-.block { display: block; }
-.padding30 { padding: 30px; }
-
-.m-t-25{margin-top: 25px;}
-.m-b-25{margin-bottom: 25px;}
+.b-full {
+  border: 1px solid #d8d8d8;
+}
+.b-t {
+  border-top: 1px solid #d8d8d8;
+}
+.b-b {
+  border-bottom: 1px solid #d8d8d8;
+}
+.b-l {
+  border-left: 1px solid #d8d8d8;
+}
+.b-r {
+  border-right: 1px solid #d8d8d8;
+}
+.f-bold {
+  font-family: "Gotham Black";
+  font-family: 700;
+}
+.text-primary {
+  color: #158ea3;
+}
+.text-u-c {
+  text-transform: uppercase;
+}
+.block {
+  display: block;
+}
+.padding30 {
+  padding: 30px;
+}
+.m-t-25 {
+  margin-top: 25px;
+}
+.m-b-25 {
+  margin-bottom: 25px;
+}
+/* -------------------------------------
+Email Template 1
+------------------------------------- */
+p {
+  line-height: 23px;
+  margin-bottom: 25px;
+}
+.content-wrap {
+  padding: 0 30px;
+}
+.header .content-wrap {
+  margin: 20px 0;
+}
+strong {
+  font-family: "Gotham Black";
+}
+.email-title {
+  color: #4c4c4c;
+  font-size: 48px;
+  font-family: "Gotham Rounded";
+}
