--- a/app/less/email/global.less
+++ b/app/less/email/global.less
@@ -225,7 +225,7 @@ a {
 .b-b { border-bottom: 1px solid #d8d8d8 }
 .b-l { border-left: 1px solid #d8d8d8 }
 .b-r { border-right: 1px solid #d8d8d8 }
-.f-bold {font-family: "Gotham Black"; font-family: 700}
+.f-bold {font-family: "Gotham Black"; font-weight: 700}
 
 .text-primary {color: #158ea3}
 .text-u-c{ text-transform: uppercase;}
