create e-ticket template with css inline

--- a/app/jade/e-ticket.jade
+++ b/app/jade/e-ticket.jade
@@ -6,7 +6,6 @@ html(lang="en")
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='description', content='')
     title E-ticket
-    link(href='css/bootstrap.css', rel='stylesheet')
     link(href='css/e-ticket.css', rel='stylesheet')
     script(src='js/libs/modernizr.custom.js')
     // HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
@@ -117,7 +116,7 @@ html(lang="en")
 
         table.table.table-bordered(width='100%', cellpadding='0', cellspacing='0')
           tr
-            td
+            td.count
               .count-number.f-bold 01
             td.adult
               label Adult
@@ -133,7 +132,7 @@ html(lang="en")
               .block 829999111133329 - 2392902830302
 
           tr
-            td
+            td.count
               .count-number.f-bold 02
             td.adult
               label Adult
