--- a/app/less/e-ticket.less
+++ b/app/less/e-ticket.less
@@ -150,6 +150,7 @@
 
   .passenger-detail {
     .table-bordered tr td {
+      vertical-align: top;
       padding: 20px;
       font-size: 13px;
       height: 99px !important;
