custom destinations form for mobile version

--- a/app/jade/custom-destinations.jade
+++ b/app/jade/custom-destinations.jade
@@ -16,7 +16,7 @@ block main
         p Here at Sapta Tour, we strive to fulfill our customers’ wishes for a perfect holiday just for you.
         p We’ve compiled <strong class="f-bold">8 questions</strong> to aid in discovering your preferences. We will then work out a custom destination for you and contact you via phone or email
 
-    form.sapta-form.user-profile.m-t(method="GET", action="custom-destinations.html")
+    form.sapta-form.m-t(method="GET", action="custom-destinations.html")
 
       h3.title-box.m-b-none.m-t-lg.m-b-lg
         | Contact
