--- a/app/less/mobile/tour.less
+++ b/app/less/mobile/tour.less
@@ -393,3 +393,31 @@
     }
   }
 }
+
+
+#customToursForm {
+  padding: 0 20px;
+
+  &.sapta-form .boxing textarea {
+    height: 50px;
+    min-height: 50px;
+    height: auto !important;
+  }
+
+  .question {
+    line-height: 20px;
+
+    &:after {
+      display: block;
+      content: " ";
+      margin-left: -20px;
+      margin-right: -20px;
+      border-top: 1px solid #ddd;
+    }
+  }
+
+  .hint {
+    font-style: italic;
+    font-size: 11.5px;
+  }
+}
