--- a/app/jade-mobile/includes/aside-menu.jade
+++ b/app/jade-mobile/includes/aside-menu.jade
@@ -66,7 +66,7 @@ nav#slide-menu
 
     ul.list-style
       li
-        a(href='/mobile/blog.html')
+        a(href='/mobile/about-sapta-tours.html')
           span.inline About
       li
         a(href='/mobile/blog.html')
