--- a/app/less/mobile/static-page.less
+++ b/app/less/mobile/static-page.less
@@ -1,4 +1,9 @@
 .static-page {
+
+  &.about-sapta-tour-page {
+    background-color: #f4f4f4
+  }
+
   .wrapper {
     background: #fff;
     border-color: #ddd;
