--- a/app/jade-mobile/find-tours.jade
+++ b/app/jade-mobile/find-tours.jade
@@ -4,7 +4,7 @@ include includes/mixin
 
 block main
   #main-wrap.form-pencarian.pos-rlt
-    form.form-find.sapta-form(id="formFindFlight", method="GET", action="mobile/tours-results.html")
+    form.form-find.sapta-form(id="formFindFlight", method="GET", action="mobile/index.html")
       h4.text-u-c.title-search.text-center.m-b-lg Find Tours
         a.close(href="/mobile") Close
 
