--- a/app/jade-mobile/hotel-detail.jade
+++ b/app/jade-mobile/hotel-detail.jade
@@ -277,7 +277,7 @@ block main
 
 
     .show-price-block.pad10.b-b.b-t
-      form(id="showTourPrice", action="")
+      form(id="showTourPrice", action="mobile/hotel-show-prices.html")
         .block.m-b-sm.check-in.bg-white
           i.ico.ico-calendar
           .date.in
