--- a/app/jade-mobile/hotel-results.jade
+++ b/app/jade-mobile/hotel-results.jade
@@ -35,9 +35,11 @@ block main
     .hotel-result-items
       .hotel-card.pos-rlt
         figure.hotel-picture.pull-left
-          img(src="img/destinations/hotel03.jpg", alt="")
+          a(href="mobile/hotel-detail.html")
+            img(src="img/destinations/hotel03.jpg", alt="")
         .hotel-meta.pull-left
-          .hotel-name.f-bold.text-u-c Mulia Resort Nusa Dua
+          a(href="mobile/hotel-detail.html")
+            .hotel-name.f-bold.text-u-c Mulia Resort Nusa Dua
           .info-extra
             span.locationan.inline.m-r-sm.pull-left.text-u-c Nusa Dua/Benoa
             span.hotel-rating.b-l.bg-white.pull-left
@@ -66,9 +68,11 @@ block main
 
       .hotel-card.pos-rlt
         figure.hotel-picture.pull-left
-          img(src="img/destinations/hotel02.jpg", alt="")
+          a(href="mobile/hotel-detail.html")
+            img(src="img/destinations/hotel02.jpg", alt="")
         .hotel-meta.pull-left
-          .hotel-name.f-bold.text-u-c W RETREAT & SPA BALI
+          a(href="mobile/hotel-detail.html")
+            .hotel-name.f-bold.text-u-c W RETREAT & SPA BALI
           .info-extra
             span.locationan.inline.m-r-sm.pull-left.text-u-c SEMINYAK
             span.hotel-rating.b-l.bg-white.pull-left
@@ -97,9 +101,11 @@ block main
 
       .hotel-card.pos-rlt
         figure.hotel-picture.pull-left
-          img(src="img/destinations/hotel01.jpg", alt="")
+          a(href="mobile/hotel-detail.html")
+            img(src="img/destinations/hotel01.jpg", alt="")
         .hotel-meta.pull-left
-          .hotel-name.f-bold.text-u-c Ayana Resort & Spa
+          a(href="mobile/hotel-detail.html")
+            .hotel-name.f-bold.text-u-c Ayana Resort & Spa
           .info-extra
             span.locationan.inline.m-r-sm.pull-left.text-u-c Jimbaran
             span.hotel-rating.b-l.bg-white.pull-left
@@ -126,9 +132,11 @@ block main
         .clearfix
       .hotel-card.pos-rlt
         figure.hotel-picture.pull-left
-          img(src="img/destinations/hotel03.jpg", alt="")
+          a(href="mobile/hotel-detail.html")
+            img(src="img/destinations/hotel03.jpg", alt="")
         .hotel-meta.pull-left
-          .hotel-name.f-bold.text-u-c Mulia Resort Nusa Dua
+          a(href="mobile/hotel-detail.html")
+            .hotel-name.f-bold.text-u-c Mulia Resort Nusa Dua
           .info-extra
             span.locationan.inline.m-r-sm.pull-left.text-u-c Nusa Dua/Benoa
             span.hotel-rating.b-l.bg-white.pull-left
@@ -157,9 +165,11 @@ block main
 
       .hotel-card.pos-rlt
         figure.hotel-picture.pull-left
-          img(src="img/destinations/hotel02.jpg", alt="")
+          a(href="mobile/hotel-detail.html")
+            img(src="img/destinations/hotel02.jpg", alt="")
         .hotel-meta.pull-left
-          .hotel-name.f-bold.text-u-c W RETREAT & SPA BALI
+          a(href="mobile/hotel-detail.html")
+            .hotel-name.f-bold.text-u-c W RETREAT &amp; SPA BALI
           .info-extra
             span.locationan.inline.m-r-sm.pull-left.text-u-c SEMINYAK
             span.hotel-rating.b-l.bg-white.pull-left
@@ -188,9 +198,11 @@ block main
 
       .hotel-card.pos-rlt
         figure.hotel-picture.pull-left
-          img(src="img/destinations/hotel01.jpg", alt="")
+          a(href="mobile/hotel-detail.html")
+            img(src="img/destinations/hotel01.jpg", alt="")
         .hotel-meta.pull-left
-          .hotel-name.f-bold.text-u-c Ayana Resort & Spa
+          a(href="mobile/hotel-detail.html")
+            .hotel-name.f-bold.text-u-c Ayana Resort & Spa
           .info-extra
             span.locationan.inline.m-r-sm.pull-left.text-u-c Jimbaran
             span.hotel-rating.b-l.bg-white.pull-left
