--- a/app/jade-mobile/includes/mixin.jade
+++ b/app/jade-mobile/includes/mixin.jade
@@ -6,7 +6,7 @@ mixin featuredDestination(image, name, param1, param2, type)
     .featured-info.pos-abt
       if type == 'hotels'
         h4.name.text-lg
-          a(href="mobile/tour-detail.html") #{name}
+          a(href="mobile/hotel-detail.html") #{name}
         span.inline.count-accomodations #{param1}
         span.inline &nbsp;Accomodations
 
