--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -177,6 +177,12 @@
         background-position: -103px 0;
       }
 
+      &-adult {
+        width: 10px;
+        height: 17px;
+        background-position: -116px 0px
+      }
+
       &-check {
         width: 25px;
         height: 25px;
