--- a/app/less/web/tour-detail.less
+++ b/app/less/web/tour-detail.less
@@ -353,3 +353,18 @@
     }
   }
 }
+
+
+#documentDetail {
+  .modal-dialog {
+    width: 480px;
+  }
+
+  .modal-body {
+    padding-left: 20px;
+
+    li {
+      padding-left: 10px;
+    }
+  }
+}
