flight booking step 3 for mobile

--- a/app/jade-mobile/hotel-show-prices.jade
+++ b/app/jade-mobile/hotel-show-prices.jade
@@ -34,7 +34,7 @@ block main
         figure.hotel-picture.pull-left
           img(src="img/destinations/room01.jpg", alt="")
 
-          a.block.m-t-sm.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
+          a.block.m-t-sm.book-btn-sm.btn-yellow(href="mobile/hotel-booking-1.html") BOOK
 
         .hotel-meta.pull-left
           .hotel-name.f-bold.text-u-c.text-14px Superior Golf King
@@ -62,7 +62,7 @@ block main
         figure.hotel-picture.pull-left
           img(src="img/destinations/room02.jpg", alt="")
 
-          a.block.m-t-sm.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
+          a.block.m-t-sm.book-btn-sm.btn-yellow(href="mobile/hotel-booking-1.html") BOOK
 
         .hotel-meta.pull-left
           .hotel-name.f-bold.text-u-c.text-14px Superior Golf Twin
@@ -90,7 +90,7 @@ block main
         figure.hotel-picture.pull-left
           img(src="img/destinations/room03.jpg", alt="")
 
-          a.block.m-t-sm.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
+          a.block.m-t-sm.book-btn-sm.btn-yellow(href="mobile/hotel-booking-1.html") BOOK
 
         .hotel-meta.pull-left
           .hotel-name.f-bold.text-u-c.text-14px Junior Suite
@@ -118,7 +118,7 @@ block main
         figure.hotel-picture.pull-left
           img(src="img/destinations/room04.jpg", alt="")
 
-          a.block.m-t-sm.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
+          a.block.m-t-sm.book-btn-sm.btn-yellow(href="mobile/hotel-booking-1.html") BOOK
 
         .hotel-meta.pull-left
           .hotel-name.f-bold.text-u-c.text-14px Ocean Suite
